--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,7 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
   <main id="main-content" data-layout="index" class="app-layout">
     <section id="hero" class:list={["pt-8 pb-6", "border-b border-border"]}>
       <h1 class="my-4 inline-block text-4xl font-bold sm:my-8 sm:text-5xl">
-        Mingalaba
+        H0KMA
       </h1>
       <a
         target="_blank"
@@ -42,10 +42,8 @@ const recentPosts = sortedPosts.filter(({ data }) => !data.featured);
       </a>
 
       <p>
-        AstroPaper is a minimal, responsive, accessible and SEO-friendly Astro
-        blog theme. This theme follows best practices and provides accessibility
-        out of the box. Light and dark mode are supported by default. Moreover,
-        additional color schemes can also be configured.
+        Hokma (חָכְמָה) es la palabra hebrea que significa sabiduría, por ese motivo hemos elegido este nombre pero que es la sabiduria si no se comparte
+con quienes de verdad la buscan, porque el hombre sabio anhela el conocimiento.
       </p>
       <p class="mt-2">
         Read the blog posts or check
